--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.1.1",
     "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.14",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
