--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.2",
     "react-native-picker-select": "^9.1.3",
